github_data_collector/src/data/issue_comment/interactivecomputing_ijs.txt
I'm using the following code from your JSON notebook and I'm getting the error below.  I don't know if this is related to #6 so I thought I'd file a newer issue about it.  Versions are listed at the end of the report. 

```json
%%json --name data
{
  "text": "foo bar",
  "number": 123,
  "flag": true,
  "items": [
    { "t": 100, "value": 3 },
    { "t": 100, "value": 4 }
  ]
}
```
```bash
evalmachine.<anonymous>:1
%%json --name data
^
SyntaxError: Unexpected token %
    at Object.exports.runInThisContext (vm.js:53:16)
    at run ([eval]:617:19)
    at onRunRequest ([eval]:388:22)
    at onMessage ([eval]:356:17)
    at emitTwo (events.js:106:13)
    at process.emit (events.js:191:7)
    at handleMessage (internal/child_process.js:718:10)
    at Pipe.channel.onread (internal/child_process.js:444:11)
```

```
[17:58:15] carlos@rivendell ijs-exp 715$ ijsnotebook --versions
ijavascript 5.0.19
jmp 0.7.5
jp-kernel 0.1.3
nel 0.5.3
uuid 3.0.1
zeromq 4.2.1
```
Hi,

Great job!
How I can render json data as: table, bar, pivottable with D3, echarts or pivottable.js ?

May I have to build everything as string setting the "$$html$$" variable?

Thanks in advance.
I am running ijs as a docker container and found it very useful to explore APIs and show demos. I would like to have the latest node LTS version available there (or multiple tags of the image based on different versions of node). Currently there is v0.10.29, and I would like to use 4.4.0 or 6.9.1.

```
# node -v
v0.10.29
```

First off thanks you very much for this. Its so useful.

When tryin to export the source as a JS file, by doing the below operation,
![ijserror](https://cloud.githubusercontent.com/assets/16969207/17255404/f8418ca2-556d-11e6-986d-3c1ad1586533.jpg)

I end up with:
![screen shot 2016-07-29 at 9 23 10 am](https://cloud.githubusercontent.com/assets/16969207/17255429/189e5142-556e-11e6-92f6-6ba22e2e0c8d.png)

When I try to do something like this in a code block:

```
%%html
<div id="table"></div>
```

I get an error:

```
SyntaxError: Unexpected token %
    at Object.exports.runInThisContext (vm.js:53:16)
    at run ([eval]:214:19)
    at doRunRequest ([eval]:122:22)
    at onMessage ([eval]:78:17)
    at emitTwo (events.js:87:13)
    at process.emit (events.js:172:7)
    at handleMessage (internal/child_process.js:689:10)
    at Pipe.channel.onread (internal/child_process.js:440:11)
```

I tried with node v5.4 and v0.10

This one is very strange. I keep getting the following error message:

``` bash
The IPython Notebook is running at: http://[all ip addresses on your system]:9999/
Shutdown this notebook server (y/[n])? WARNING:root:kernel f8e660a0-5f89-462e-911e-65d48ac2aebd restarted

module.js:340
    throw err;
          ^
Error: Cannot find module 'acorn/acorn'
    at Function.Module._resolveFilename (module.js:338:15)
    at Function.Module._load (module.js:280:25)
    at Module.require (module.js:364:17)
    at require (module.js:380:17)
    at exports.toString (/home/ge/ijs/node_modules/tern/lib/infer.js:17:25)
    at Object.<anonymous> (/home/ge/ijs/node_modules/tern/lib/infer.js:22:3)
    at Module._compile (module.js:456:26)
    at Object.Module._extensions..js (module.js:474:10)
    at Module.load (module.js:356:32)
    at Function.Module._load (module.js:312:12)
^C[C 14:23:13.108 NotebookApp] received signal 2, stopping
```

Hi @nikhilk, and first thanks to share your project on github. I'm really interested in using ipython notebooks for javascript for my students next year, and your implementation seems quite valuable for my needs with both js on front and backend. 

Maybe you know that there is another project implementing a javascript kernel for ipython/jupyter, it's named [ijavascript](https://github.com/n-riesco/ijavascript) and it is listed in the ipython [wiki](https://github.com/ipython/ipython/wiki/IPython-kernels-for-other-languages), maybe you could add you're project to the wiki to give it more visibility.

I have to put '#' at the beginning of the line to write a comment, which doesn't seem valid.
